--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@prisma/client": "^6.9.0",
     "bcrypt": "^6.0.0",
+    "camelcase-keys": "^9.1.3",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "snakecase-keys": "^8.0.1",
     "zod": "^3.25.42"
   },
   "devDependencies": {
